cabal-version:      2.4
name:               journeyman
version:            0.1.0.0
license:            LGPL-2.1-or-later
copyright:          2023 Mike Ledger
maintainer:         mike@quasimal.com
author:             Mike Ledger
category:           Web
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -funbox-small-strict-fields

  mixins:
    base hiding (Prelude),
    base (Prelude as BasePrelude)

  default-extensions:
    NoStarIsType
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    PolyKinds
    PostfixOperators
    QuantifiedConstraints
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeFamilyDependencies
    TypeOperators
    ViewPatterns

  build-depends:
    , acc
    , aeson
    , array
    , base               >=4.13.0.0 && <4.18.0.0.0
    , brick
    , colour
    , containers
    , data-default
    , directory
    , dlist
    , generic-lens
    , kan-extensions
    , lens
    , mtl
    , nonempty-zipper
    , palette
    , pretty-simple
    , primitive
    , PyF
    , relude
    , semialign
    , smallcheck
    , stm
    , these
    , transformers
    , vector
    , vector-algorithms
    , vector-builder
    , vty
    , with-utf8

  default-language:   Haskell2010

library
  import:          shared
  hs-source-dirs:  src
  other-modules:   Prelude
  exposed-modules:
    Data.Dependency
    Data.Tuple.Ordered
    Tourney.Algebra
    Tourney.Algebra.Builder
    Tourney.Algebra.Unified
    Tourney.Common
    Tourney.Format.DoubleElimination
    Tourney.Format.ICantBelieveItCanSort
    Tourney.Format.InsertionSort
    Tourney.Format.OptimalSortingNetwork
    Tourney.Format.RoundRobin
    Tourney.Format.SingleElimination
    Tourney.Format.Swiss
    Tourney.Match
    Tourney.Match.Matrix
    Tourney.SortingNetwork
    Tourney.Stream
    Tourney.UI.Main
    Tourney.UI.Selection
    Tourney.VM
    Tourney.VM.Code
    Tourney.VM.Compile
    Tourney.VM.Interpret

test-suite test
  import:             shared
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-tool-depends: hspec-discover:hspec-discover
  build-depends:
    , hspec-discover
    , journeyman
